<resources>
    <string name="app_name">DesignUi</string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="main_menu">Main Menu</string>
    <string name="menu_about">About</string>
    <string name="menu_cart">Cart</string>
    <string name="menu_checkout">Checkout</string>
    <string name="menu_contact">Contact</string>
    <string name="menu_info">Information</string>
    <string name="menu_product">Product</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_share">Share</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
